changes in signup style ... need to fix issues w/ whitespace

--- a/less/base.less
+++ b/less/base.less
@@ -274,17 +274,37 @@ Language: LESS
 	td#content > ul, td#sidebar > ul {
 		display:inline; // for forms
 	}
+	
+	@legendHeight: 20px;
+	legend {
+		float:left;
+		font-size: 18px;
+		text-shadow: 0px 1px 0px rgba(255,255,255,.3), 0px -1px 0px rgba(0,0,0,.7);
+		.theme1();
+		margin-left: -10px;
+		margin-top: -@legendHeight;
+		padding:0 10px;
+		line-height: @legendHeight;
+	}
 
 	fieldset {
 		background: @form_bgcolor;
+		position: relative;
 		padding:1px;
-		padding: 15px 10px 0;
+		padding: @legendHeight 10px 0;
 		margin:10px;
 		display:inline;
 		vertical-align:middle;
 		border: 1px solid #B6B6B6;
 		.box-shadow(0 0 5px #000);
-
+		
+		> p {
+			position: absolute;
+			right: 15px;
+		    font-size: 11px;
+		    margin-top: -@legendHeight + 4;
+		}
+		
 		ul {
 			margin:10px;
 
@@ -302,17 +322,6 @@ Language: LESS
 			.advanced-gradent(#b9e0f5, #92bdd6);
 			.box-shadow(~'0 0 8px rgba(0, 0, 0, 0.15), 0 1px 0 rgba(255,255,255,0.8) inset');
 		}
-	}
-
-	legend {
-		float:left;
-		font-size: 18px;
-		text-shadow: 0px 1px 0px rgba(255,255,255,.3), 0px -1px 0px rgba(0,0,0,.7);
-		.theme1();
-		margin-left: -10px;
-		margin-top: -15px;
-		padding:0 10px;
-		line-height:20px;
 	}
 
 	fieldset, legend {
