--- a/less/home.less
+++ b/less/home.less
@@ -1,5 +1,7 @@
 ul.signup {
 	position: relative;//for text near field set
+	display: inline-block;
+	vertical-align: top;
 
 	li {
 		display: block;
@@ -18,10 +20,4 @@ ul.signup {
 	input {
 		margin-right: 0; //reset from another part of the style
 	}
-}
-
-.signup-c p {
-	float: right;
-    font-size: 11px;
-    margin-top: -8px;
 }
